@@ -1,4 +1,6 @@
 {{$NEXT}}
+  - Updates to documentation for DeprecatedFeatures and DiscouragedModules policies
+  - Add require ::Foo::Bar to DeprecatedFeatures policy
 
 0.019     2017-01-29 22:13:34 EST
   - Add autoderef to DeprecatedFeatures policy
